<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".LoginActivity"
    android:background="@color/colorBackground"
    android:clickable="false">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/app_name"
        android:id="@+id/textView"
        android:layout_marginTop="40dp"
        android:textSize="@dimen/title_size"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textColor="@color/colorWhite" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_request"
        android:id="@+id/textView2"
        android:layout_marginTop="45dp"
        android:layout_below="@+id/textView"
        android:layout_alignLeft="@+id/txtEmail"
        android:layout_alignStart="@+id/txtEmail"
        android:textSize="@dimen/default_size"
        android:textColor="@color/colorWhite" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password_request"
        android:id="@+id/textView3"
        android:textSize="@dimen/default_size"
        android:textColor="@color/colorWhite"
        android:layout_centerVertical="true"
        android:layout_alignLeft="@+id/txtPassword"
        android:layout_alignStart="@+id/txtPassword" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/txtEmail"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:textColor="@color/colorFontAccent"
        android:textColorHighlight="@color/colorWhite"
        android:textColorHint="@color/colorOpaque"
        android:textColorLink="@color/colorWhite"
        android:hint="@string/email_example" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/txtPassword"
        android:layout_below="@+id/textView3"
        android:layout_alignLeft="@+id/txtEmail"
        android:layout_alignStart="@+id/txtEmail"
        android:textColor="@color/colorWhite"
        android:textColorHighlight="@color/colorWhite"
        android:textColorHint="@color/colorOpaque"
        android:textColorLink="@color/colorWhite"
        android:hint="@string/password_example" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:id="@+id/btnLogin"
        android:textColor="@color/colorWhite"
        android:background="@color/colorAccent"
        android:textSize="@dimen/default_size"
        android:layout_below="@+id/txtPassword"
        android:layout_alignLeft="@+id/textView"
        android:layout_alignStart="@+id/textView"
        android:layout_marginTop="80dp"
        android:layout_alignRight="@+id/textView"
        android:layout_alignEnd="@+id/textView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/sign_up"
        android:id="@+id/lkSignUp"
        android:textSize="@dimen/default_size"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:onClick="abrirCadastro"
        android:textColor="@color/colorFontAccent"
        android:clickable="true" />

</RelativeLayout>
